--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,17 +34,17 @@ services:
       DJANGO_ROLES: 'manager, user'
       # -- UPDATE DEFAULT USER
       # Username and password for initial superuser
-      DJANGO_DEFAULT_USERNAME: 'AdminUser'
-      DJANGO_DEFAULT_PASSWORD: 'AdminPassword'
+      DJANGO_DEFAULT_USERNAME: 'user'
+      DJANGO_DEFAULT_PASSWORD: 'password'
       DJANGO_DEFAULT_EMAIL: 'email@martinmark.com'
-      DJANGO_DEFAULT_ROLE: 'manager'
+      DJANGO_DEFAULT_ROLE: 'user'
       # -- UPDATE SECRET
       # Any $ in your secret key needs another $ for interpolation. > ex. `...4v$0n^c...` becomes `...4v$$0n^c...` (read readme.md)
       DJANGO_SECRET: 'T2uy8pg3OjW26TdngnPA3LjuPlthW8AH6xIOBXu9oFs'
       PYTHONUNBUFFERED: 1
       PIP_NO_CACHE_DIR: 1
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:8000/api/logic/healthcheck/ || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:8000/users/logic/healthcheck/ || exit 1"]
       interval: 5s
       timeout: 5s
       retries: 25
@@ -71,18 +71,19 @@ services:
       HASURA_GRAPHQL_UNAUTHORIZED_ROLE: 'public'
       HASURA_GRAPHQL_DATABASE_URL: 'postgres://postgres:password@postgres:5432/postgres'
       HASURA_GRAPHQL_ADMIN_SECRET: 'password'
+      HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS: "true"
       # -- UPDATE SECRET
       # Any $ in your secret key needs another $ for interpolation. > ex. `...4v$0n^c...` becomes `...4v$$0n^c...` (read readme.md)
       HASURA_GRAPHQL_JWT_SECRET: '{ "type": "HS256", "key": "T2uy8pg3OjW26TdngnPA3LjuPlthW8AH6xIOBXu9oFs" }'
 
-  client:
-    image: node:16
-    container_name: hds-client
-    restart: always
-    command: bash -c "npm install && HOST=0.0.0.0 npm run dev"
-    ports:
-      - "127.0.0.1:35729:35729" # Live Reload
-      - "127.0.0.1:8088:8088"
-    working_dir: /home/node/apps/app
-    volumes:
-      - ./client:/home/node/apps/app
+  # client:
+  #   image: node:16
+  #   container_name: hds-client
+  #   restart: always
+  #   command: bash -c "npm install && HOST=0.0.0.0 npm run dev"
+  #   ports:
+  #     - "127.0.0.1:35729:35729" # Live Reload
+  #     - "127.0.0.1:8088:8088"
+  #   working_dir: /home/node/apps/app
+  #   volumes:
+  #     - ./client:/home/node/apps/app
