added hasura with django remote schema

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -5,6 +5,13 @@ django-rest-passwordreset<2
 djangorestframework<4
 djangorestframework-simplejwt<5
 gunicorn<21
-uuid<2
 psycopg2<3
 requests<3
+
+django-environ==0.11.2
+
+# GraphQL
+graphene==3.3
+django-graphql-jwt==0.4.0
+graphene-django==3.2.2
+openpyxl==3.1.5
