--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,5 +1,18 @@
-- "!include public_api_profile.yaml"
-- "!include public_api_role.yaml"
 - "!include public_auth_user.yaml"
 - "!include public_demo_realtime.yaml"
 - "!include public_django_rest_passwordreset_resetpasswordtoken.yaml"
+- "!include public_production_planning_address.yaml"
+- "!include public_production_planning_castingbox.yaml"
+- "!include public_production_planning_clientoffoundry.yaml"
+- "!include public_production_planning_country.yaml"
+- "!include public_production_planning_foundry.yaml"
+- "!include public_production_planning_foundrygroup.yaml"
+- "!include public_production_planning_material.yaml"
+- "!include public_production_planning_material_foundry.yaml"
+- "!include public_production_planning_model.yaml"
+- "!include public_production_planning_order.yaml"
+- "!include public_production_planning_ordersincastingbox.yaml"
+- "!include public_production_planning_platetype.yaml"
+- "!include public_production_planning_userextended.yaml"
+- "!include public_users_profile.yaml"
+- "!include public_users_role.yaml"
